<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingTop="50dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/betty"
                android:fontFamily="sans-serif"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/betty_count"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/has_0_votes"/>

            <Button
                android:id="@+id/vote_betty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/vote_for_betty"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif"
                android:text="@string/veronica"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/veronica_count"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/has_0_votes"/>

            <Button
                android:id="@+id/vote_veronica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/vote_for_veronica"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/change_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_color"
        android:layout_gravity="center"/>

    <Button
        android:layout_margin="10dp"
        android:id="@+id/reset_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_votes"
        android:layout_gravity="center"/>

    </LinearLayout>
</layout>